--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-scrollto": "^2.17.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.0.0",
